--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
+# Backend Environment Variables (for server/.env)
+NODE_ENV=development
 PORT=5000
 MONGODB_URI=mongodb+srv://nikhiljaat330_db_user:nikhil.123@cluster0.dq0bfsb.mongodb.net/?appName=Cluster0
-JWT_SECRET=your_jwt_secret_key_here_change_in_production
+JWT_SECRET=your_jwt_secret_here
 JWT_EXPIRE=7d
-NODE_ENV=development
+GOOGLE_CLIENT_ID=your_google_client_id_here
+FACEBOOK_APP_ID=your_facebook_app_id_here
