--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "mongodb": "^6.20.0",
     "mongoose": "^8.0.0",
     "multer": "^1.4.5-lts.1",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
